# Valknut

./: CMakeLists.txt  README.md  Ransomware.sln  aes_decrypt.cpp  aes_encrypt.cpp  enc_dec_engine.h  test.cpp  utils.cpp  utils.h
Ransomware/: EncryptionEngine.cpp  EncryptionEngine.h  Ransomware.rc  Ransomware.vcxproj  Ransomware.vcxproj.filters  RansomwareApp.cpp  RansomwareApp.h  RansomwareMain.cpp  RansomwareMain.h  Resource.h
Ransomware/x64/Debug/: Ransomware.exe.recipe  vc142.idb
Ransomware/x64/Debug/Ransomware.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Ransomware.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Web/: README.md  process.php  valknut.css  valknut.php  valknutPayment.css  valknutPayment.php
paymentpage/: paymentform.css  paymentform.html
website main page/: website.html  websitedesign.css
x64/Debug/: Ransomware.ilk  test.txt
